--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline (DOC)
 on:
   #Manually trigger workflow runs
   workflow_dispatch:
-  #Trigger the workflow on push from the main branch
+  #Trigger the workflow on push from the master branch
   push:
     branches: [ master ]
     #  - master
@@ -34,3 +34,47 @@ jobs:
       #Run Tests
       - name: Run Tests
         run: mvn -B test
+    # Build jobs
+    build:
+      # depends on test's job
+      needs: tests
+      name: Build
+      #Run on Ubuntu using the latest version
+      runs-on: ubuntu-latest
+      steps:
+        #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+        - uses: actions/checkout@v1
+        #Set up JDK 17
+        - name: Set up JDK 17
+          uses: actions/setup-java@v1
+          with:
+            java-version: '17'
+        #Set up Maven cache
+        - name: Cache Maven packages
+          #This action allows caching dependencies and build outputs to improve workflow execution time.
+          uses: actions/cache@v1
+          with:
+            path: ~/.m2
+            key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+            restore-keys: ${{ runner.os }}-m2
+        # Build the application using Maven
+        - name: Build with Maven
+          run: mvn -B package -DskipTests --file pom.xml
+        #Build the application using Maven
+        - name: Upload JAR
+          #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
+          uses: actions/upload-artifact@v2
+            with:
+              #Set artifact name
+              name: artifact
+              #From this path
+              path: target/devops-tools-mgt-SNAPSHOT-1.0.jar
+    #Deploy's job
+    deploy:
+      #Depends on build's job
+      needs: build
+      name: Deploy
+      runs-on: ubuntu-latest
+        steps:
+          - name: Run a Script to automate deployment
+            run: echo "Deployment part of CD coming next..."
