--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,10 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
-        - uses: actions/checkout@v1
+        - uses: actions/checkout@v3
         #Set up JDK 17
         - name: Set up JDK 17
-          uses: actions/setup-java@v1
+          uses: actions/setup-java@v3
           with:
             java-version: '17'
         #Set up Maven cache
@@ -69,10 +69,26 @@ jobs:
             name: artifact
             #From this path
             path: target/devops-tools-mgt-SNAPSHOT-1.0.jar
+    # Publish's job
+    publish-app-image:
+      #Depends on build's job
+      needs: build
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v2
+        - name: Build the App Docker image
+          run: |
+            echo $GHCR_PAT | docker login ghcr.io -u viajook --password-stdin
+          env:
+            GHCR_PAT: ${{ secrets.GHCR_PAT }}
+            docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
+            docker run ghcr.io/viajook/doc-project-cicd1:latest
+            docker push ghcr.io/jviajook/doc-project-cicd1:latest
     #Deploy's job
     deploy:
       #Depends on build's job
-      needs: build
+      needs: publish-app-image
       name: Deploy
       runs-on: ubuntu-latest
       steps:
