--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches: [ master ]
     #  - master
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  GHCR_PAT: ${{ secrets.GHCR_PAT }}
 
 jobs:
     #Test's job
@@ -17,7 +21,7 @@ jobs:
       #Job's steps
       steps:
       #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       #Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v1
@@ -74,21 +78,21 @@ jobs:
       #Depends on build's job
       needs: build
       runs-on: ubuntu-latest
+      permissions:
+        contents: read
+        packages: write
 
       steps:
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v3
         - name: Login to GitHub Container Registry
           uses: docker/login-action@v1
           with:
             registry: ghcr.io
             username: ${{ github.actor }}
             password: ${{ secrets.GITHUB_TOKEN }}
-
         - name: Build the App Docker image
           run: |
-          #  echo $GHCR_PAT | docker login ghcr.io -u viajook --password-stdin
-          #env:
-          #  GHCR_PAT: ${{ secrets.GHCR_PAT }}
+            echo $GHCR_PAT | docker login ghcr.io -u viajook --password-stdin
             docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
             docker run ghcr.io/viajook/doc-project-cicd1:latest
             docker push ghcr.io/jviajook/doc-project-cicd1:latest
