Minor changes to the build pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
     # Publish's job
     publish-app-image:
       #Depends on build's job
-      needs: build
+      # needs: build
       runs-on: ubuntu-latest
       permissions:
         contents: read
