--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,12 @@ jobs:
 
       steps:
         - uses: actions/checkout@v3
+        - name: Login to Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
         - name: Login to GitHub Container Registry
           uses: docker/login-action@v1
           with:
@@ -92,7 +98,6 @@ jobs:
             password: ${{ secrets.GITHUB_TOKEN }}
         - name: Build the App Docker image
           run: |
-            # echo $GHCR_PAT | docker login ghcr.io -u viajook --password-stdin
             docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
             docker run ghcr.io/viajook/doc-project-cicd1:latest
             docker push ghcr.io/jviajook/doc-project-cicd1:latest
