--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,10 @@ on:
   push:
     branches: [ master ]
     #  - master
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-  GHCR_PAT: ${{ secrets.GHCR_PAT }}
+#env:
+#  REGISTRY: ghcr.io
+#  IMAGE_NAME: ${{ github.repository }}
+#  GHCR_PAT: ${{ secrets.GHCR_PAT }}
 
 jobs:
     #Test's job
@@ -64,49 +64,3 @@ jobs:
         # Build the application using Maven
         - name: Build with Maven
           run: mvn -B package -DskipTests --file pom.xml
-        #Build the application using Maven
-        - name: Upload JAR
-          #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
-          uses: actions/upload-artifact@v2
-          with:
-            #Set artifact name
-            name: artifact
-            #From this path
-            path: target/devops-tools-mgt-SNAPSHOT-1.0.jar
-    # Publish's job
-    publish-app-image:
-      #Depends on build's job
-      # needs: build
-      runs-on: ubuntu-latest
-      permissions:
-        contents: read
-        packages: write
-
-      steps:
-        - uses: actions/checkout@v3
-        - name: Login to Docker Hub
-          uses: docker/login-action@v2
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-        - name: Login to GitHub Container Registry
-          uses: docker/login-action@v1
-          with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
-        - name: Build the App Docker image
-          run: |
-            docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
-            docker run ghcr.io/viajook/doc-project-cicd1:latest
-            docker push ghcr.io/jviajook/doc-project-cicd1:latest
-    #Deploy's job
-    deploy:
-      #Depends on build's job
-      needs: publish-app-image
-      name: Deploy
-      runs-on: ubuntu-latest
-      steps:
-        - name: Run a Script to automate deployment
-          run: echo "Deployment part of CD coming next..."
