--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,10 @@
 name: publish
-on: [push]
+on: push
+
 jobs:
-  # Publish's job
-  publish-app-docker-image:
+  publish-docker-image:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: Login to GitHub Container Registry
