Minor changes in publish to push to master branch

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,12 @@
 name: publish
-on: push
+on:
+  push:
+    branches: [ master ]
 
 jobs:
+  #Publish's job
   publish-docker-image:
+    name: Publish image
     runs-on: ubuntu-latest
 
     steps:
