Small changes to GHCR

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,20 +4,17 @@ on:
     branches: [ master ]
 
 jobs:
-  #Publish's job
-  publishimage:
-    name: Publish image
+  login:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Login to GitHub Container Registry
-    uses: docker/login-action@v1
-    with:
-      registry: ghcr.io
-      username: ${{ github.actor }}
-      password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build the App Docker image
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build the App Docker image
         run: |
           docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
           docker run ghcr.io/viajook/doc-project-cicd1:latest
