--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,18 @@
+name: CI Pipeline
+
+on:
+  push:
+    branches: [ master ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run add YAML Script for the build job
+        run: echo "Build Job part of the CI/CD pipeline"
 Comment: >
 
   name: CI/CD Pipeline (DOC)
