--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,41 @@ on:
     branches: [ master ]
 
 jobs:
+  # Build jobs
+  build:
+    # depends on test's job
+    # needs: tests
+    name: Build
+    #Run on Ubuntu using the latest version
+    runs-on: ubuntu-latest
+    steps:
+      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+      - uses: actions/checkout@v2
+      #Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+      #Set up Maven cache
+      - name: Cache Maven packages
+        #This action allows caching dependencies and build outputs to improve workflow execution time.
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      # Build the application using Maven
+      - name: Build with Maven
+        run: mvn -B package -DskipTests --file pom.xml
+      #Build the application using Maven
+      - name: Upload JAR
+        #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
+        uses: actions/upload-artifact@v2
+          with:
+            #Set artifact name
+            name: artifact
+            #From this path
+            path: target/devops-tools-mgt-SNAPSHOT-1.0.jar
   login:
     runs-on: ubuntu-latest
     steps:
@@ -14,8 +49,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Check out code
-        uses: actions/checkout@v2
+      #- name: Check out code
+      #  uses: actions/checkout@v2
       - name: Build the App Docker image
         run: |
           docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
