Minor change - to remove DOCKER_BUILDKIT

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,6 +53,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Build the App Docker image
         run: |
-          DOCKER_BUILDKIT=1 docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
+          docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
           docker run ghcr.io/viajook/doc-project-cicd1:latest
           docker push ghcr.io/jviajook/doc-project-cicd1:latest
