--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,9 +39,22 @@ jobs:
           name: artifact
           #From this path
           path: target/devops-tools-mgt-SNAPSHOT-1.0.jar
-  login:
+
+  Publish: #login:
+    needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+          with:
+            java-version: '17'
+
+      - name: Update version
+        run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -49,10 +62,21 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Build the App Docker image
-        run: |
-          docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
-          docker run ghcr.io/viajook/doc-project-cicd1:latest
-          docker push ghcr.io/jviajook/doc-project-cicd1:latest
+
+      #- name: Check out code
+      #  uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+
+      #- name: Build the App Docker image and push
+      #  run: |
+      #    docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
+      #    docker run ghcr.io/viajook/doc-project-cicd1:latest
+      #    docker push ghcr.io/jviajook/doc-project-cicd1:latest
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: viajook/doc-project-cicd1:v${{github.run_number}}
