--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,11 +72,12 @@ jobs:
       #  run: |
       #    docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
       #    docker run ghcr.io/viajook/doc-project-cicd1:latest
-      #    docker push ghcr.io/jviajook/doc-project-cicd1:latest
+      #    docker push ghcr.io/viajook/doc-project-cicd1:latest
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: viajook/doc-project-cicd1:v${{github.run_number}}
