Changed to another builder

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,17 +30,19 @@ jobs:
       # Build the application using Maven
       - name: Build with Maven
         run: mvn -B package -DskipTests --file pom.xml
+      - run: mkdir staging && cp target/*jar-with-dependencies.jar staging
       #Build the application using Maven
       - name: Upload JAR
         #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
         uses: actions/upload-artifact@v2
         with:
-          #Set artifact name
-          name: artifact
+          #Set artifact name b4 artifact
+          name: Package
           #From this path
-          path: target/devops-tools-mgt-SNAPSHOT-1.0.jar
+          path: staging # b4 target/devops-tools-mgt-SNAPSHOT-1.0.jar
 
   Publish: #login:
+    name: Publish to GH Container Registry
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -52,8 +54,8 @@ jobs:
 
       - name: Update version
         run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      #- name: Setup Docker Buildx
+      #  uses: docker/setup-buildx-action@v1
 
       -
         name: Login to GitHub Container Registry
@@ -68,16 +70,15 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v2
 
-      #- name: Build the App Docker image and push
-      #  run: |
-      #    docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
-      #    docker run ghcr.io/viajook/doc-project-cicd1:latest
-      #    docker push ghcr.io/viajook/doc-project-cicd1:latest
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: viajook/doc-project-cicd1:v${{github.run_number}}
+      - name: Build the App Docker image and push
+        run: |
+          docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
+          docker run ghcr.io/viajook/doc-project-cicd1:latest
+          docker push ghcr.io/viajook/doc-project-cicd1:latest
+      #- name: Build and push
+      #  id: docker_build
+      #  uses: docker/build-push-action@v2
+      #  with:
+      #    context: .
+      #    push: true
+      #    tags: viajook/doc-project-cicd1:v${{github.run_number}}
