Minor change to pom - jar exec

--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,9 @@
                         <configuration>
                             <archive>
                                 <manifest>
+                                    <addClasspath>true</addClasspath>
                                     <mainClass>
-                                        DevopsToolsMgtApplication
+                                        via.doc.devopstoolsmgt.DevopsToolsMgtApplication
                                     </mainClass>
                                 </manifest>
                             </archive>
