--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,10 +50,15 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
+          distribution: 'adopt' # See 'Supported distributions' for available options
           java-version: '17'
 
-      - name: Update version
-        run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
+      # Build Spring boot
+      - name: Build the project
+        run: mvn -B install
+
+      #- name: Update version
+      #  run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
       #- name: Setup Docker Buildx
       #  uses: docker/setup-buildx-action@v1
 
@@ -73,7 +78,7 @@ jobs:
       #  uses: actions/download-artifact@v2
 
       - name: Build the App Docker image and push
-        run: mvn compile jib:build
+        run: mvn jib:build
         #run: |
         #  docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
         #  docker run ghcr.io/viajook/doc-project-cicd1:latest
