--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <name>devops-tools-mgt</name>
     <description>devops-tools-mgt</description>
     <properties>
+        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <java.version>17</java.version>
     </properties>
     <dependencies>
