--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,7 +78,7 @@ jobs:
       #  uses: actions/download-artifact@v2
 
       - name: Build the App Docker image and push
-        run: mvn jib:build
+        run: mvn compile jib:build
         #run: |
         #  docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
         #  docker run ghcr.io/viajook/doc-project-cicd1:latest
