--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,10 +4,36 @@ on:
     branches: [ master ]
 
 jobs:
+  #Test's job
+  tests:
+    name: Unit tests
+    #Run on Ubuntu using the latest version
+    runs-on: ubuntu-latest
+    #Job's steps
+    steps:
+      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+      - uses: actions/checkout@v2
+      #Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+      #Set up Maven cache
+      - name: Cache Maven packages
+        #This action allows caching dependencies and build outputs to improve workflow execution time.
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      #Run Tests
+      - name: Run Tests
+        run: mvn -B test
+
   # Build jobs
   build:
     # depends on test's job
-    # needs: tests
+    needs: tests
     name: Build
     #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
@@ -36,12 +62,12 @@ jobs:
         #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
         uses: actions/upload-artifact@v2
         with:
-          #Set artifact name b4 artifact
+          #Set artifact name b4 the artifact
           name: Package
           #From this path
           path: staging # b4 target/devops-tools-mgt-SNAPSHOT-1.0.jar
 
-  Publish: #login:
+  Publish:
     name: Publish to GH Container Registry
     needs: build
     runs-on: ubuntu-latest
@@ -50,17 +76,12 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          distribution: 'adopt' # See 'Supported distributions' for available options
+          distribution: 'adopt'
           java-version: '17'
 
       # Build Spring boot
       - name: Build the project
         run: mvn -B install
-
-      #- name: Update version
-      #  run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
-      #- name: Setup Docker Buildx
-      #  uses: docker/setup-buildx-action@v1
 
       -
         name: Login to GitHub Container Registry
@@ -72,24 +93,8 @@ jobs:
           # Log out from the Docker registry at the end of a job
           logout: true
 
-      #- name: Check out code
-      #  uses: actions/checkout@v2
-      #- name: Download artifact
-      #  uses: actions/download-artifact@v2
-
       - name: Build the App Docker image and push
         run: mvn compile jib:build
-        #run: |
-        #  docker build . --tag ghcr.io/viajook/doc-project-cicd1:latest
-        #  docker run ghcr.io/viajook/doc-project-cicd1:latest
-        #  docker push ghcr.io/viajook/doc-project-cicd1:latest
-      #- name: Build and push
-      #  id: docker_build
-      #  uses: docker/build-push-action@v2
-      #  with:
-      #    context: .
-      #    push: true
-      #    tags: viajook/doc-project-cicd1:v${{github.run_number}}
 
   Deploy:
     runs-on: ubuntu-latest
@@ -99,13 +104,8 @@ jobs:
       - name: Checkout GitHub Action
         uses: actions/checkout@v2
 
-      #- name: Login via Azure CLI
-      #  uses: azure/login@v1
-      #  with:
-      #    creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Deploy Docker Image
-        uses: azure/webapps-deploy@v2 #azure/spring-apps-deploy@v2
+        uses: azure/webapps-deploy@v2
         with:
           app-name: 'devops-tools-mgt'
           publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
